# orionx-admin-panel

./: README.md
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_chains.py  0003_sync_tasks.py  0004_chain_sync_status.py  0005_chain_sync_attempt.py  0006_api_keys.py  0007_api_keys_chain_quota.py  0008_api_keys_drop_legacy_and_not_null_chain.py  0009_api_keys_encrypted_value.py  0010_api_keys_quota_modes.py  0011_api_key_usage_events.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: api_keys.py  auth.py  billing.py  chains.py  health.py  usage.py  users.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/integrations/: apisix.py
backend/app/modules/api_keys/: __init__.py  crypto.py  models.py  schemas.py  service.py
backend/app/modules/auth/: deps.py  schemas.py  security.py  service.py
backend/app/modules/billing/: models.py  schemas.py  service.py
backend/app/modules/chains/: models.py  schemas.py  service.py
backend/app/modules/sync/: __init__.py  models.py  service.py
backend/app/modules/users/: models.py  schemas.py
backend/app/workers/: queue.py  rq_worker.py  tasks.py
db/: README.md  docker-compose.yml
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  authProvider.ts  index.css  main.tsx  theme.ts  vite-env.d.ts
frontend/src/components/: AppSider.tsx  LogoutConfirmModal.tsx
frontend/src/pages/: apiKeys.tsx  chains.tsx  login.tsx  (+4 more)
(+4 files in other folders)
