[project]
name = "orionx-backend"
version = "0.1.0"
description = "Admin panel backend (FastAPI)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic[email]>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "greenlet>=3.0",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "redis>=5.0",
  "rq>=1.16",
  "httpx>=0.27",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app", "app.*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
